[hat] codegen refactoring